<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Other_Apps">برنامه های دیگر</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">درباره ما</string>
    <string name="about_desc">Visit: www.kratos47mhs.tk</string>
    <string name="app_name">گنجور</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">برگشت</string>
    <string name="backup">پشتیبان گیری</string>
    <string name="backup_error">خطای پشتیبان گیری</string>
    <string name="backup_saved">" پشتیبان گیری داده در %1$s"</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bug">باگ</string>
    <string name="cancel">لغو</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose">انتخاب کنید</string>
    <string name="choose_a_color">یک رنگ انتخاب کنید:</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="contact_title">تماس با ما</string>
    <string name="continue_anyway">به هر حال ادامه دهید</string>
    <string name="counter_note">%1$d یاداشت شعر</string>
    <string name="create">ساخت</string>
    <string name="credit">نسبت دادن</string>
    <string name="data_restored">داده ها با موفقیت بازیابی شدند.</string>
    <string name="delete">حذف</string>
    <string name="dialog_title_licenses">درباره برنامه نویس</string>
    <string name="edit">ویرایش</string>
    <string name="edit_category">تغیر نام شاعر</string>
    <string name="email_send">یک برنامه را انتخاب کنید</string>
    <string name="empty">خالی</string>
    <string name="exit_message">برای خروج مجددا فشار دهید</string>
    <string name="help">معاونت</string>
    <string name="icon">آیکن</string>
    <string name="int_ad">ca-app-pub-4208089383901046/1016749181</string>
    <string name="license">درباره ما</string>
    <string name="license_developer_email">kratos47mhs@gmail.com</string>
    <string name="license_developer_phone">+989367395920</string>
    <string name="license_title_dev">اطلاعات توسعه دهنده</string>
    <string name="license_title_developer">فرخ پاکباز</string>
    <string name="menu">فهرست</string>
    <string name="msg">پیام خود را اینجا بنویسید</string>
    <string name="new_category">اضافه کردن شاعر</string>
    <string name="new_folder">پوشه جدید</string>
    <string name="new_note">اشعار جدید</string>
    <string name="no_ad">بدون تبلیغ</string>
    <string name="no_categories">هیچ شاعری یافت نشد!</string>
    <string name="no_categories_desc">"برای یادآوری شعر،
 پوشه شاعر جدید ایجاد کنید"</string>
    <string name="no_mounted_sd">هیچ SD-کارتی یافت نشد</string>
    <string name="no_notes">هیچ یادداشتی یافت نشد!</string>
    <string name="no_notes_desc">"شروع به گرفتن یادداشت شعر ها
 با اضافه کردن یک جدید"</string>
    <string name="no_notes_hint">بدون اشعار</string>
    <string name="not_implemented">This section has not been implemented for the beta version.</string>
    <string name="ok">باشه</string>
    <string name="one_note">1 یاداشت شعر</string>
    <string name="permission">اجازه</string>
    <string name="permission_error">اجازه داده نشده است</string>
    <string name="permission_error_desc">گنجور کلام ممکن است بدون اجازه به دسترسی به ذخیره سازی خارجی کار اشتباه انجام دهد.</string>
    <string name="permission_granted">اجازه اعطا شده است</string>
    <string name="privacy">Privacy Policy</string>
    <string name="rate_app">نظرات به این برنامه</string>
    <string name="request">موافق</string>
    <string name="required">این قسمت ضروری است</string>
    <string name="restore">بازیابی اطلاعات</string>
    <string name="restore_error">بازیابی خطا</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="save">ذخیره سازی شعر</string>
    <string name="search_menu_title">Search</string>
    <string name="send">ارسال</string>
    <string name="settings">Preferences</string>
    <string name="share">اشتراک گذاری</string>
    <string name="start_drawing">شروع به نقاشی کنید</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="storage_permission">گنجور کلام نیاز به دسترسی به ذخیره سازی خارجی خود را برای ذخیره داده ها</string>
    <string name="subject">عنوان</string>
    <string name="theme">زمینه</string>
    <string name="title">اسم شاعر</string>
    <string name="to">ایمیل</string>
    <string name="tool">ابزار</string>
    <string name="undo">برگشتن</string>
    <string name="persian_poetry_hub">دایره المعارف شعر فارسی</string>
    <string name="main_title_description">آثار سخنسرایان پارسی‌گو</string>
    <string name="todo">TODO</string>
    <string name="returnToHome">بازگشت به خانه</string>
</resources>
