<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_home"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="?colorPrimary"
            ads:contentInsetLeft="0.0dip"
            ads:contentInsetStart="0.0dip">

            <TextView
                android:id="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="5.0dip"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text" />

            <ImageView
                android:layout_width="@dimen/toolbar_height"
                android:layout_height="@dimen/toolbar_height"
                android:layout_gravity="start|center|top"
                android:contentDescription="@string/menu"
                android:scaleType="center"
                ads:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@id/nav_btn"
                android:layout_width="@dimen/toolbar_height"
                android:layout_height="@dimen/toolbar_height"
                android:layout_gravity="start|center|top"
                android:background="@drawable/ripple_circle"
                android:clickable="true"
                android:contentDescription="@string/menu"
                android:scaleType="center"
                ads:srcCompat="@drawable/ic_menu_24dp"
                android:focusable="true" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:id="@id/edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:orientation="vertical"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20.0dip"
                    android:text="@string/contact_title"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20.0sp" />

                <EditText
                    android:id="@id/txtTo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/to"
                    android:textColor="@color/white"
                    android:autofillHints=""
                    android:inputType="TODO" />

                <EditText
                    android:id="@id/txtSubject"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject"
                    android:textColor="@color/white"
                    android:autofillHints=""
                    android:inputType="TODO" />

                <EditText
                    android:id="@id/txtMessage"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="top"
                    android:hint="@string/msg"
                    android:paddingBottom="80.0dip"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@id/send1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@id/send"
                        android:layout_width="80.0dip"
                        android:layout_height="40.0dip"
                        android:background="@drawable/btn"
                        android:text="@string/send" />
                </LinearLayout>

                <Button
                    android:id="@id/main_menu"
                    android:layout_width="120.0dip"
                    android:layout_height="40.0dip"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="60.0dip"
                    android:background="@drawable/btn"
                    android:onClick="onClick"
                    android:text="@string/returnToHome" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob" />
    </RelativeLayout>

    <include layout="@layout/drawer" />
</androidx.core.widget.DrawerLayout>