<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
    <android.support.design.widget.TextInputLayout android:id="@id/text_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:textSize="@dimen/medium_text" android:textColor="@color/main_text" android:textColorHint="@color/hint_text" android:id="@id/title_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/title" />
    </android.support.design.widget.TextInputLayout>
    <TextView android:textSize="@dimen/small_text" android:textColor="@color/secondary_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="8.0dip" android:text="@string/choose_a_color" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <ImageView android:id="@id/theme_red" android:background="@drawable/circle_red" android:layout_width="48.0dip" android:layout_height="48.0dip" android:scaleType="center" android:contentDescription="@string/theme" />
        <ImageView android:id="@id/theme_pink" android:background="@drawable/circle_pink" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:scaleType="center" android:contentDescription="@string/theme" />
        <ImageView android:id="@id/theme_purple" android:background="@drawable/circle_purple" android:layout_width="48.0dip" android:layout_height="48.0dip" android:scaleType="center" android:contentDescription="@string/theme" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <ImageView android:id="@id/theme_blue" android:background="@drawable/circle_blue" android:layout_width="48.0dip" android:layout_height="48.0dip" android:scaleType="center" android:contentDescription="@string/theme" />
        <ImageView android:id="@id/theme_cyan" android:background="@drawable/circle_cyan" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:scaleType="center" android:contentDescription="@string/theme" />
        <ImageView android:id="@id/theme_teal" android:background="@drawable/circle_teal" android:layout_width="48.0dip" android:layout_height="48.0dip" android:scaleType="center" android:contentDescription="@string/theme" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <ImageView android:id="@id/theme_green" android:background="@drawable/circle_green" android:layout_width="48.0dip" android:layout_height="48.0dip" android:scaleType="center" android:contentDescription="@string/theme" />
        <ImageView android:id="@id/theme_amber" android:background="@drawable/circle_amber" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:scaleType="center" android:contentDescription="@string/theme" />
        <ImageView android:id="@id/theme_orange" android:background="@drawable/circle_orange" android:layout_width="48.0dip" android:layout_height="48.0dip" android:scaleType="center" android:contentDescription="@string/theme" />
    </LinearLayout>
</LinearLayout>